--- a/notes/templates/notes/base.html
+++ b/notes/templates/notes/base.html
@@ -2,24 +2,45 @@
 <html>
 <head>
     <title>Sticky Notes</title>
-</head>
-<body>
-    <h1>Sticky Notes</h1>
-    {% block content %}
-    {% endblock %}
-</body>
-</html>
-
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Sticky Notes</title>
     <link rel="stylesheet" type="text/css" href="{% static 'notes/styles.css' %}">
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+        }
+        .navbar {
+            background-color: #333;
+            color: #fff;
+            padding: 1rem;
+        }
+        .navbar a {
+            color: #fff;
+            text-decoration: none;
+            margin-right: 1rem;
+        }
+        .container {
+            padding: 2rem;
+        }
+        .content {
+            background: #fff;
+            padding: 2rem;
+            margin-top: 1rem;
+            box-shadow: 0 0 10px rgba(0,0,0,0.1);
+        }
+    </style>
 </head>
 <body>
-    <h1>Sticky Notes</h1>
-    {% block content %}
-    {% endblock %}
+    <div class="navbar">
+        <a href="{% url 'note_list' %}">Home</a>
+        <a href="{% url 'note_create' %}">Add Note</a>
+    </div>
+    <div class="container">
+        <div class="content">
+            {% block content %}
+            {% endblock %}
+        </div>
+    </div>
 </body>
 </html>
-
