--- a/notes/templates/notes/note_detail.html
+++ b/notes/templates/notes/note_detail.html
@@ -1,8 +1,9 @@
 {% extends 'notes/base.html' %}
+
 {% block content %}
-    <h2>{{ note.title }}</h2>
-    <p>{{ note.content }}</p>
-    <a href="{% url 'note_edit' note.pk %}">Edit</a>
-    <a href="{% url 'note_delete' note.pk %}">Delete</a>
-    <a href="{% url 'note_list' %}">Back to list</a>
+<h2>{{ note.title }}</h2>
+<p>{{ note.content }}</p>
+<a href="{% url 'note_update' note.pk %}">Edit</a>
+<a href="{% url 'note_delete' note.pk %}">Delete</a>
+<a href="{% url 'note_list' %}">Back to list</a>
 {% endblock %}
