--- a/notes/templates/notes/base.html
+++ b/notes/templates/notes/base.html
@@ -2,6 +2,9 @@
 <html>
 <head>
     <title>Sticky Notes</title>
+
+    {% load static %}
+    
     <link rel="stylesheet" type="text/css" href="{% static 'notes/styles.css' %}">
     <style>
         body {
