--- a/notes/templates/notes/note_detail.html
+++ b/notes/templates/notes/note_detail.html
@@ -3,7 +3,7 @@
 {% block content %}
 <h2>{{ note.title }}</h2>
 <p>{{ note.content }}</p>
-<a href="{% url 'note_update' note.pk %}">Edit</a>
-<a href="{% url 'note_delete' note.pk %}">Delete</a>
+<a href="{% url 'note_update' pk=note.pk %}">Edit Note</a>
+<a href="{% url 'note_delete' pk=note.pk %}">Delete</a>
 <a href="{% url 'note_list' %}">Back to list</a>
 {% endblock %}
