--- a/notes/templates/notes/note_list.html
+++ b/notes/templates/notes/note_list.html
@@ -9,7 +9,10 @@
 <ul>
     {% for note in notes %}
     <li>
-        <a href="{% url 'note_detail' note.pk %}">{{ note.title }}</a>
+        <a href="{% url 'note_detail' pk=note.pk %}">{{ note.title }}</a>
+        - <a href="{% url 'note_update' pk=note.pk %}">Edit</a>
+        - <a href="{% url 'note_delete' pk=note.pk %}" onclick="return confirm('Are you sure you want to delete this note?');">Delete</a>
+    </li>
     </li>
     {% endfor %}
 </ul>
